# HelvetaCS

./: .clang-format  .gitattributes  CMakeLists.txt  Helveta.cc  Memory.cc  Memory.hh  README.md
Animator/: Animator.cc  Animator.hh
Console/: Console.cc  Console.hh
Dll/: Dll.cc  Dll.hh
Drawing/: Color.cc  Color.hh  Drawing.cc  Drawing.hh  Geometry.cc  Geometry.hh  Queue.cc  Queue.hh
Entities/: CBaseCombatWeapon.cc  CBaseCombatWeapon.hh  CBaseEntity.cc  CBaseEntity.hh  CBasePlayer.cc  CBasePlayer.hh  CCSPlayer.hh  Cacher.cc  Cacher.hh  Forward.hh
Features/: Features.cc  Features.hh  Visuals.hh
Features/Legitbot/: Legitbot.cc  Legitbot.hh
Features/Misc/: Misc.cc  Misc.hh
Features/Visuals/: Visuals.cc  Visuals.hh
Globals/: Globals.hh
Helpers/: Helpers.hh  Types.hh  Util.hh
Hooks/: Hooks.cc  Hooks.hh  Prototypes.hh
InfoBar/: InfoBar.cc  InfoBar.hh
Netvars/: Netvars.cc  Netvars.hh
Resources/: Terminus.hh
SDK/: CGlobalVarsBase.hh  CUserCmd.hh  ClientClass.hh  ClientModeShared.hh  ConVar.cc  ConVar.hh  Constants.hh  Forward.hh  IClientEntityList.hh  IInputSystem.cc  IInputSystem.hh  ILocalize.cc  ILocalize.hh  IVDebugOverlay.cc  IVDebugOverlay.hh  IVEngineClient.cc  IVEngineClient.hh
